<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grayish_gradient"
    tools:context=".Fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frameLayout_ads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserat"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayout_ads"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0C1723"
        android:background="@drawable/frame_custom_layout_ads"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/layout_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:text="@string/ads_will_display_here"
    android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="@id/frameLayout_ads"
        app:layout_constraintEnd_toEndOf="@id/frameLayout_ads"
        app:layout_constraintTop_toBottomOf="@id/frameLayout_ads"
        app:layout_constraintBottom_toTopOf="@id/guideline12">

        <LinearLayout
            android:id="@+id/howtouse"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"

            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/how_to_use"
                android:tint="@color/indicator"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/how_to_use"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/callscreen1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="10dp"
           >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/call_screens"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Languages"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <ImageView
                android:layout_width="30dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/language_icon"
                android:tint="@color/redish_btn"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/languages"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:fontFamily="@font/montserat"
            android:text="@string/more_settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
           >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/rate_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MoreApps"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/more_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/more_apps"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/privacy1"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/privacy" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/montserat"
                android:text="@string/privacy_amp_policy"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />





</androidx.constraintlayout.widget.ConstraintLayout>