<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity"
    android:background="@drawable/grayish_gradient">

    <ImageView
        android:id="@+id/img_gold"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/fake_calling"
        app:layout_constraintBottom_toTopOf="@id/txt_appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/txt_appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserat"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/txt_lorem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_gold" />

    <TextView
        android:id="@+id/txt_lorem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserat"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:text="@string/your_prankster_s_playground"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="@+id/txt_appName"
        app:layout_constraintStart_toStartOf="@+id/txt_appName"
        app:layout_constraintTop_toBottomOf="@+id/txt_appName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_feature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#161616"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lorem"
        app:strokeColor="@android:color/transparent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/features"
                app:layout_constraintBottom_toTopOf="@id/llff"
                android:fontFamily="@font/montserat"
                android:textColor="#FF4738"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserat"
                        android:text="@string/customize_call_visuals_effortlessly"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserat"
                        android:text="@string/add_names_numbers_and_profiles"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserat"
                        android:text="@string/set_call_durations_for_authenticity"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserat"
                        android:text="@string/prank_with_both_sound_and_sight"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/montserat"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#FF4738"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/framelayout_Ads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_feature" />


    <FrameLayout
        android:id="@+id/framelayout_Ads"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />
</androidx.constraintlayout.widget.ConstraintLayout>